# Create3D

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ai/c3d-ai-context/: Cargo.toml
ai/c3d-ai-context/src/: builder.rs  lib.rs  pack.rs
ai/c3d-ai-copilot/: Cargo.toml
ai/c3d-ai-copilot/src/: engine.rs  error.rs  executor.rs  lib.rs  mock_provider.rs  proposal.rs  provider.rs  remote_llm_provider.rs  remote_stub_provider.rs  response.rs
ai/c3d-ai-tool-protocol/: Cargo.toml
ai/c3d-ai-tool-protocol/src/: call.rs  definition.rs  error.rs  lib.rs  registry.rs  validate.rs
apps/create3d-cli/: Cargo.toml
apps/create3d-cli/src/: main.rs
apps/create3d-desktop/: Cargo.toml
apps/create3d-desktop/src/: main.rs
apps/create3d-ros2-bridge/: Cargo.toml
apps/create3d-ros2-bridge/src/: main.rs
apps/create3d-sync-server/: Cargo.toml
apps/create3d-sync-server/src/: main.rs
asset/c3d-asset-db/: Cargo.toml
asset/c3d-asset-db/src/: blob.rs  db.rs  error.rs  hash.rs  index.rs  lib.rs
asset/c3d-asset-gsplat/: Cargo.toml
asset/c3d-asset-gsplat/src/: asset.rs  chunk.rs  lib.rs  residency.rs
asset/c3d-asset-material/: Cargo.toml
asset/c3d-asset-material/src/: graph.rs  lib.rs  material.rs
asset/c3d-asset-mesh/: Cargo.toml
asset/c3d-asset-mesh/src/: lib.rs  mesh.rs
asset/c3d-asset-pointcloud/: Cargo.toml
asset/c3d-asset-pointcloud/src/: asset.rs  chunk.rs  lib.rs  residency.rs
asset/c3d-export-gltf/: Cargo.toml
asset/c3d-export-gltf/src/: export.rs  lib.rs
asset/c3d-export-gsplat/: Cargo.toml
asset/c3d-export-gsplat/src/: export.rs  lib.rs
asset/c3d-export-ply/: Cargo.toml
asset/c3d-export-ply/src/: export.rs  lib.rs
asset/c3d-export-usd/: Cargo.toml
asset/c3d-export-usd/src/: export.rs  lib.rs
asset/c3d-import-collada/: Cargo.toml
asset/c3d-import-collada/src/: error.rs  import.rs  lib.rs
asset/c3d-import-gltf/: Cargo.toml
asset/c3d-import-gltf/src/: error.rs  import.rs  lib.rs  scene_ops.rs
asset/c3d-import-gsplat/: Cargo.toml
asset/c3d-import-gsplat/src/: chunking.rs  error.rs  import.rs  lib.rs  synthetic.rs
asset/c3d-import-ply/: Cargo.toml
asset/c3d-import-ply/src/: chunking.rs  error.rs  import.rs  lib.rs  ply_header.rs  synthetic.rs
asset/c3d-import-stl/: Cargo.toml
asset/c3d-import-stl/src/: error.rs  import.rs  lib.rs
asset/c3d-mesh-authoring/: Cargo.toml
asset/c3d-mesh-authoring/src/: lib.rs  ops.rs  primitives.rs  processing.rs  thumbnail.rs  topology.rs
collaboration/c3d-collab-core/: Cargo.toml
collaboration/c3d-collab-core/src/: comment.rs  ids.rs  lib.rs  log.rs  presence.rs  proposal.rs
collaboration/c3d-sync/: Cargo.toml
collaboration/c3d-sync/src/: client.rs  hub.rs  lib.rs  policy.rs  protocol.rs  server.rs  store.rs
collaboration/c3d-sync/tests/: two_clients.rs
docs/: known-limitations.md
docs/architecture/: create3d_master_architecture_design.md  dependency-rules.md
docs/guides/: ai-tool-guide.md  plugin-guide-v0.md  robotics-guide.md  user-guide.md
docs/rfcs/: 0000-template.md
editor/c3d-editor-core/: Cargo.toml
editor/c3d-editor-core/src/: commands.rs  lib.rs  selection.rs
editor/c3d-viewport/: Cargo.toml
editor/c3d-viewport/src/: camera.rs  gizmo.rs  lib.rs  mesh.rs  mesh_cache.rs  mode.rs  picking.rs  point_cloud_cache.rs  renderer.rs  shaders.rs  splat_cache.rs
engine/c3d-core/: Cargo.toml
engine/c3d-core/src/: error.rs  id.rs  lib.rs  logging.rs  math.rs  version.rs
engine/c3d-ecs/: Cargo.toml
engine/c3d-ecs/src/: components.rs  lib.rs  projection.rs
project/c3d-project/: Cargo.toml
project/c3d-project/src/: authoring.rs  error.rs  export.rs  gsplat.rs  import.rs  lib.rs  manifest.rs  pointcloud.rs  project.rs  recovery.rs  robot.rs  template.rs
renderer/c3d-rhi/: Cargo.toml
renderer/c3d-rhi-wgpu/: Cargo.toml
renderer/c3d-rhi-wgpu/src/: backend.rs  convert.rs  lib.rs  surface.rs
renderer/c3d-rhi/src/: error.rs  lib.rs  types.rs
robotics/c3d-robotics-core/: Cargo.toml
robotics/c3d-robotics-core/src/: bridge_targets.rs  kinematics.rs  lib.rs  live_tf.rs  mock_bridge.rs  protocol.rs  sidecar_client.rs  tf_tree.rs
robotics/c3d-urdf/: Cargo.toml
robotics/c3d-urdf/src/: error.rs  lib.rs  mesh_path.rs  model.rs  parse.rs  synthetic.rs
samples/: README.md
samples/ai-editing-demo/: manifest.c3d.toml
samples/ai-editing-demo/assets/: index.c3dassetdb
samples/ai-editing-demo/scenes/: main.c3dscene.json
samples/gaussian-splat-scene/: manifest.c3d.toml
samples/gaussian-splat-scene/assets/: index.c3dassetdb
samples/gaussian-splat-scene/scenes/: main.c3dscene.json
samples/mesh-scene/: manifest.c3d.toml
samples/mesh-scene/assets/: index.c3dassetdb
samples/mesh-scene/scenes/: main.c3dscene.json
samples/point-cloud-scene/: manifest.c3d.toml
samples/point-cloud-scene/assets/: index.c3dassetdb
samples/point-cloud-scene/scenes/: main.c3dscene.json
samples/urdf-robot-scene/: manifest.c3d.toml
samples/urdf-robot-scene/assets/: index.c3dassetdb
samples/urdf-robot-scene/scenes/: main.c3dscene.json
scene/c3d-scene-doc/: Cargo.toml
scene/c3d-scene-doc/src/: entity.rs  error.rs  lib.rs  scene_doc.rs  serialize.rs
scene/c3d-scene-ops/: Cargo.toml
scene/c3d-scene-ops/src/: apply.rs  lib.rs  manager.rs  operation.rs  provenance.rs  transaction.rs
scene/c3d-scene-ops/tests/: replay.rs
scene/c3d-scene-schema/: Cargo.toml
scene/c3d-scene-schema/src/: lib.rs  registry.rs
scene/c3d-scene-schema/src/components/: annotation.rs  gaussian_splat_ref.rs  material_binding.rs  mesh_ref.rs  mod.rs  name.rs  point_cloud_ref.rs  robot_joint.rs  robot_link.rs  robot_root.rs  transform.rs
tests/golden-scenes/: Cargo.toml
tests/golden-scenes/fixtures/empty/: empty.c3dscene.json  manifest.json
tests/golden-scenes/src/: lib.rs
tools/readme-preview/: Cargo.toml
tools/readme-preview/src/: main.rs  preview_scene.rs
tools/ros2_sidecar/: bridge.py
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
