[workspace]
resolver = "2"
members = [
    "engine/c3d-core",
    "engine/c3d-ecs",
    "asset/c3d-asset-db",
    "asset/c3d-asset-mesh",
    "asset/c3d-asset-material",
    "asset/c3d-asset-pointcloud",
    "asset/c3d-asset-gsplat",
    "asset/c3d-import-ply",
    "asset/c3d-import-gsplat",
    "asset/c3d-mesh-authoring",
    "asset/c3d-import-gltf",
    "asset/c3d-import-stl",
    "asset/c3d-export-gltf",
    "asset/c3d-export-usd",
    "asset/c3d-export-ply",
    "project/c3d-project",
    "scene/c3d-scene-schema",
    "scene/c3d-scene-doc",
    "scene/c3d-scene-ops",
    "renderer/c3d-rhi",
    "renderer/c3d-rhi-wgpu",
    "editor/c3d-editor-core",
    "editor/c3d-viewport",
    "apps/create3d-desktop",
    "apps/create3d-cli",
    "apps/create3d-ros2-bridge",
    "tools/xtask",
    "tools/readme-preview",
    "tests/golden-scenes",
    "ai/c3d-ai-tool-protocol",
    "ai/c3d-ai-context",
    "ai/c3d-ai-copilot",
    "robotics/c3d-robotics-core",
    "robotics/c3d-urdf",
    "collaboration/c3d-collab-core",
    "collaboration/c3d-sync",
    "apps/create3d-sync-server",
]
default-members = ["engine/c3d-core"]

[workspace.package]
version = "0.1.5-beta"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/create3d/create3d"
authors = ["Create3D Contributors"]

[workspace.dependencies]
c3d-core = { path = "engine/c3d-core" }
c3d-ecs = { path = "engine/c3d-ecs" }
c3d-asset-db = { path = "asset/c3d-asset-db" }
c3d-asset-mesh = { path = "asset/c3d-asset-mesh" }
c3d-asset-material = { path = "asset/c3d-asset-material" }
c3d-asset-pointcloud = { path = "asset/c3d-asset-pointcloud" }
c3d-asset-gsplat = { path = "asset/c3d-asset-gsplat" }
c3d-import-ply = { path = "asset/c3d-import-ply" }
c3d-import-gsplat = { path = "asset/c3d-import-gsplat" }
c3d-mesh-authoring = { path = "asset/c3d-mesh-authoring" }
c3d-import-gltf = { path = "asset/c3d-import-gltf" }
c3d-import-stl = { path = "asset/c3d-import-stl" }
c3d-export-gltf = { path = "asset/c3d-export-gltf" }
c3d-export-usd = { path = "asset/c3d-export-usd" }
c3d-export-ply = { path = "asset/c3d-export-ply" }
c3d-project = { path = "project/c3d-project" }
c3d-scene-schema = { path = "scene/c3d-scene-schema" }
c3d-scene-doc = { path = "scene/c3d-scene-doc" }
c3d-scene-ops = { path = "scene/c3d-scene-ops" }
c3d-rhi = { path = "renderer/c3d-rhi" }
c3d-rhi-wgpu = { path = "renderer/c3d-rhi-wgpu" }
c3d-viewport = { path = "editor/c3d-viewport" }
c3d-editor-core = { path = "editor/c3d-editor-core" }
c3d-ai-tool-protocol = { path = "ai/c3d-ai-tool-protocol" }
c3d-ai-context = { path = "ai/c3d-ai-context" }
c3d-ai-copilot = { path = "ai/c3d-ai-copilot" }
c3d-robotics-core = { path = "robotics/c3d-robotics-core" }
c3d-urdf = { path = "robotics/c3d-urdf" }
c3d-collab-core = { path = "collaboration/c3d-collab-core" }
c3d-sync = { path = "collaboration/c3d-sync" }
glam = { version = "0.29", default-features = false, features = ["libm", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
bevy_ecs = "0.16"
wgpu = "25"
winit = { version = "0.30", features = ["rwh_06"] }
pollster = "0.4"
egui = "0.32"
egui-wgpu = { version = "0.32", features = ["winit"] }
egui-winit = "0.32"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
blake3 = "1"
gltf = { version = "1", features = ["import", "names"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
toml = "0.8"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
