[package]
name = "c3d-ai-context"
description = "AI context pack builder for Create3D Copilot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
c3d-ai-tool-protocol.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-doc.workspace = true
c3d-scene-schema.workspace = true
serde.workspace = true

[lints]
workspace = true
