[package]
name = "c3d-ai-copilot"
description = "Create3D Copilot orchestration, mock provider, and tool execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
c3d-ai-context.workspace = true
c3d-ai-tool-protocol.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-doc.workspace = true
c3d-scene-ops.workspace = true
c3d-scene-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
