[package]
name = "c3d-ai-tool-protocol"
description = "AI tool protocol schema, registry, and permission checks for Create3D"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
