[package]
name = "create3d-cli"
description = "Create3D command-line tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "create3d-cli"
path = "src/main.rs"

[dependencies]
c3d-core = { workspace = true, features = ["serde"] }
c3d-project.workspace = true
c3d-scene-ops.workspace = true
c3d-scene-schema.workspace = true
clap.workspace = true
tempfile = "3"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
