[package]
name = "create3d-ros2-bridge"
description = "Create3D ROS2 sidecar bridge over TCP JSONL IPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "create3d-ros2-bridge"
path = "src/main.rs"

[dependencies]
c3d-core = { workspace = true, features = ["serde"] }
c3d-robotics-core.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
