[package]
name = "c3d-asset-pointcloud"
description = "Create3D point cloud asset metadata and chunk payloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-db.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-schema.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
