[package]
name = "c3d-import-collada"
description = "Collada (.dae) mesh importer for Create3D"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-mesh.workspace = true
roxmltree.workspace = true
thiserror.workspace = true

[lints]
workspace = true
