[package]
name = "c3d-import-gltf"
description = "Create3D glTF/GLB importer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-material.workspace = true
c3d-asset-mesh.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-ops.workspace = true
c3d-scene-schema.workspace = true
gltf.workspace = true
image.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
