[package]
name = "c3d-import-gsplat"
description = "3D Gaussian splat PLY importer for Create3D"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-gsplat.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
