[package]
name = "c3d-import-ply"
description = "PLY point cloud importer for Create3D"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-pointcloud.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
thiserror.workspace = true

[lints]
workspace = true
