[package]
name = "c3d-collab-core"
description = "Collaboration primitives: operation log, comments, presence, and proposals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-ops.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
c3d-scene-schema.workspace = true

[lints]
workspace = true
