[package]
name = "c3d-sync"
description = "Create3D collaboration sync protocol, hub, and client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-collab-core = { path = "../c3d-collab-core" }
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-ops.workspace = true
c3d-scene-schema.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
