[package]
name = "c3d-editor-core"
description = "Create3D editor core: selection state and command registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-core = { workspace = true, features = ["serde"] }

[lints]
workspace = true
