[package]
name = "c3d-core"
description = "Create3D core primitives: IDs, errors, math, logging, and versioning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "ulid/serde", "glam/serde"]

[dependencies]
glam.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
