[package]
name = "c3d-ecs"
description = "Create3D ECS runtime projection wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bevy_ecs.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-scene-doc.workspace = true
c3d-scene-schema.workspace = true
glam.workspace = true

[lints]
workspace = true
