[package]
name = "c3d-project"
description = "Create3D project format: manifest, scene, and asset database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
c3d-asset-db.workspace = true
c3d-asset-material.workspace = true
c3d-asset-mesh.workspace = true
c3d-asset-pointcloud.workspace = true
c3d-core = { workspace = true, features = ["serde"] }
c3d-export-gltf.workspace = true
c3d-import-gltf.workspace = true
c3d-asset-gsplat.workspace = true
c3d-import-ply.workspace = true
c3d-import-gsplat.workspace = true
c3d-urdf.workspace = true
c3d-mesh-authoring.workspace = true
c3d-scene-doc.workspace = true
c3d-scene-ops.workspace = true
c3d-scene-schema.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
c3d-robotics-core.workspace = true
tempfile = "3"

[lints]
workspace = true
