[package]
name = "c3d-rhi-wgpu"
description = "wgpu backend for Create3D RHI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
c3d-rhi.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
thiserror.workspace = true
bytemuck.workspace = true

[lints]
workspace = true
